--- a/style.css
+++ b/style.css
@@ -2,6 +2,100 @@
     margin: 0;
     padding: 0;
 }
-.navlist{
-background-color: black;
+
+
+.na{
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 100px;
+    background-color: black;
+    display:inline-block;
+    position:sticky;
+    top: 0;
+    width: 1500px;
+    
+    
+    
 }
+.na ul li{
+    margin-left: 5%;
+    
+    display:inline;
+    text-decoration: none;
+}
+.na ul li a{
+
+    font-size: 25px;
+    text-decoration:none;
+    color: whitesmoke;
+}
+
+.i1{
+    width: 100px;
+    border: 5px;
+    border-color: whitesmoke;
+    border-radius: 50px; 
+    position: absolute;
+    top: 0px;
+    left: 4px;
+    
+    
+
+}
+.f{
+    align-items: flex-start;
+}
+.d2{
+    width: 20%;
+    height: 70;
+}
+body{
+    background-image: url('https://picsum.photos/1600/1600?random=2');
+
+}
+.f {
+    position: absolute;
+    top: 140px;
+    right: 70px;
+ }
+ .f1 {
+    position: absolute;
+    top: 470px;
+    right: 70px;
+ }
+ .f2 {
+    position: absolute;
+    top: 800px;
+    right: 70px;
+ }
+ .a{
+     font-style: italic;
+     
+ }
+.btn{
+    background-color: blue;
+    font-size: 30px;
+    color: whitesmoke;
+    margin-left: 200px;
+    border-radius: 50px;
+    border: 2px;
+    width: 90px;
+    height: 40px;
+}
+.hv:hover{
+    background-color:blue;
+    font-size: 40px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 0px;
+   
+     
+}
+.hv{
+    margin-top: 5000px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+    margin-bottom: 5000px;
+}
+ 
